<resources>
    <string name="app_name">BIT Student Helper</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="welcome">Please Login into your account</string>
    <string name="login">Login</string>
    <string name="loginFinger">Or use fingerprint</string>
    <string name="NoReg">Not registered yet? Register now.</string>
    <string name="RollNum">Roll Number</string>
    <string name="Pass">Password</string>
    <string name="rollFormat">BE/xxxxx/yy</string>
    <string name="reg">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginDet">Please enter your details </string>
    <string name="name">Name</string>
    <string name="materials">CourseMaterials</string>
    <string name="notices">Notice</string>
    <string name="activities">Activities</string>


    <string-array name="course">
        <item>BE</item>
        <item>BArch</item>
        <item>BPharm</item>
        <item>MTech</item>
        <item>MCA</item>
        <item>MBA</item>
        <item>HMCT</item>
        <item>IMSc</item>
        <item>Phd</item>
    </string-array>
    <string-array name="branch">
        <item>IT</item>
        <item>CSE</item>
        <item>Mech</item>
        <item>Civil</item>
        <item>BioTech</item>
        <item>Prod</item>
        <item>Chem</item>
        <item>CHP</item>
        <item>EEE</item>
        <item>ECE</item>
    </string-array>
    <string-array name="yr">
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
    </string-array>
</resources>
