<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xmohitx.bitstudenthelper.MainActivity">

    <RelativeLayout
        android:layout_width="395dp"
        android:layout_height="587dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="50sp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="75dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_below="@+id/textView"
            android:layout_marginStart="30dp"
            android:layout_marginTop="200dp" />

        <Button
            android:id="@+id/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:textSize="30sp"
            android:layout_below="@+id/textView"
            android:layout_toEndOf="@id/login"
            android:layout_marginTop="200dp"
            android:layout_marginStart="50dp"
            />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
