<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xmohitx.bitstudenthelper.RegisterActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter your details"
            android:textSize="30sp"
            android:textColor="#e567fa"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:hint="Name"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RollNum"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/rollno"
            android:hint="XXXXX"
            android:layout_margin="10dp"
            android:maxLength="5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Course"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="10dp"/>
        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/course"
            android:layout_margin="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Branch"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="10dp"/>

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/branch"
            android:layout_margin="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="Enter a valid email"
            android:layout_margin="10dp"
            android:maxLength="30"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/phone"
            android:layout_margin="10dp"
            android:maxLength="11"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Year of Admission"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/yoa"
            android:layout_margin="10dp"
            android:maxLength="4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Semester"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/currsem"
            android:layout_margin="10dp"
            android:maxLength="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter Password"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/pass"
            android:inputType="textPassword"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Re-enter Password"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/repass"
            android:inputType="textPassword"
            android:layout_margin="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:id="@+id/reg"
            android:text="@string/reg"
            android:layout_gravity="center"/>

    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.v7.widget.LinearLayoutCompat>
